--- a/styles/style.css
+++ b/styles/style.css
@@ -104,7 +104,7 @@ img {
 }
 .apresentacao__links {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: space-between;
     gap: 32px;
