--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,7 @@ body {
 .a {
     display: flex;
     justify-content: center;
+    gap: 16px;
     border: 2px solid var(--cor-terciaria);
     border-radius: 9px;
     font-size:1rem;
@@ -32,12 +33,12 @@ body {
     padding: 20px 10px;
 }
 
-.a: visited {
+.a:visited {
     background-color: var(--cor-terciaria);
     color:var(--cor-secundaria);
     text-decoration: none;
 } 
-.a: hover {
+.a:hover {
     background-color: var(--cor-terciaria);
     color:var(--cor-secundaria);
     text-decoration: none;
