--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,7 @@ body {
     display: flex;
     justify-content: center;
     gap: 16px;
+    width: 100%;
     border: 2px solid var(--cor-terciaria);
     border-radius: 9px;
     font-size:1rem;
