--- a/styles/style.css
+++ b/styles/style.css
@@ -25,10 +25,10 @@ body {
 }
 
 .logo {
-  max-width: 10%;
+  /*max-width: 10%; */
   padding: 2% 20% 0% 20%;
   width: 100%;
-  height: auto;
+  /*height: auto;*/
 }
 
 .cabecalho {
