--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ body {
 
 .logo {
   max-width: 10%;
-  padding: 0% 20%;
+  padding: 1% 20% 0% 20%;
   width: 100%;
   /*height: auto;*/
 }
@@ -52,7 +52,7 @@ body {
 }
 
 .apresentacao {
-    padding: 0% 10%;
+    padding: 2% 10%;
     display: flex;
     align-items: center;
     justify-content: space-between;
