--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
     --cor-secundaria: #f6f6f6;
     --cor-terciaria: #f10843;
     --cor-hover: #272727;
-    --fonte-primaria: "Arial", sans-serif;
+    --fonte-primaria: "Montserrat", sans-serif;
     --fonte-secundaria: 'Montserrat', sans-serif;
 }
 * {
