--- a/styles/style.css
+++ b/styles/style.css
@@ -122,6 +122,7 @@ body {
     font-family: var(--fonte-secundaria);
     font-size:1.4rem;
     font-weight: 400;
+    text-align: center;
     text-decoration: none;
 }
 
@@ -129,7 +130,7 @@ body {
     display: flex;
     justify-content: center;
     gap: 16px;
-    width: 100%;
+    width: 70%;
     border: 2px solid var(--cor-terciaria);
     border-radius: 9px;
     font-size:1rem;
