--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@ body {
 
 .cabecalho__menu__link {
     font-family: var(--fonte-primaria);
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     font-weight: 600;
     text-align: center;
     color:var(--cor-terciaria);
@@ -140,7 +140,7 @@ body {
     font-style: normal;
     text-align: center;
     text-decoration: none;
-    padding: 20px 10px;
+    padding: 20px;
 }
 
 .apresentacao__links__navegacao:visited {
