--- a/styles/style.css
+++ b/styles/style.css
@@ -114,7 +114,7 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     gap: 32px;
 }
 
