--- a/styles/style.css
+++ b/styles/style.css
@@ -77,7 +77,7 @@ body {
     font-family: var(--fonte-primaria);
 }
 .titulo_nome {
-    padding: 5% 5%;
+    padding: 5% 0% 5% 0%;
     font-family: var(--fonte-primaria);
     font-size: 2rem;
     font-weight: 400;
@@ -93,6 +93,7 @@ body {
     font-family: var(--fonte-secundaria);
     font-weight: 400;
     color: var(--cor-primaria);
+    text-align: center;
 }
 
 .apresentacao__conteudo__textocard {
