--- a/styles/style.css
+++ b/styles/style.css
@@ -180,6 +180,35 @@ body {
     text-decoration: none;
 }
 
+.rodape__links__navegacao{
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    width: 70%;
+    border: 2px solid var(--cor-terciaria);
+    border-radius: 9px;
+    font-size:1rem;
+    font-weight: 200;
+    color: var(--cor-secundaria);
+    font-family: var(--fonte-secundaria);
+    /*font-weight: 300; */
+    font-style: normal;
+    text-align: center;
+    text-decoration: none;
+    padding: 20px;
+}
+
+.rodape__links__navegacao:visited {
+    background-color: var(--cor-terciaria);
+    color:var(--cor-secundaria);
+    text-decoration: none;
+} 
+.rodape__links__navegacao:hover {
+    background-color: var(--cor-terciaria);
+    color:var(--cor-secundaria);
+    text-decoration: none;
+} 
+    
 @media (max-width: 1200px) {
     .cabecalho {
         padding: 15%;
