--- a/styles/style.css
+++ b/styles/style.css
@@ -184,14 +184,13 @@ body {
     display: flex;
     justify-content: center;
     gap: 16px;
-    width: 70%;
+    /*width: 70%;*/
     border: 2px solid var(--cor-terciaria);
     border-radius: 9px;
     font-size:1rem;
     font-weight: 200;
     color: var(--cor-secundaria);
     font-family: var(--fonte-secundaria);
-    /*font-weight: 300; */
     font-style: normal;
     text-align: center;
     text-decoration: none;
