--- a/styles/style.css
+++ b/styles/style.css
@@ -71,6 +71,7 @@ body {
     font-size:1.2rem;
     font-weight: 200;
     font-family: var(--fonte-primaria);
+    text-align: center;
 }
 
 .apresentacao__conteudo__titulocard {
