--- a/styles/style.css
+++ b/styles/style.css
@@ -173,10 +173,10 @@ body {
 .rodape {
     padding: 2px;
     text-align: center;
-    color: var(--cor-secundaria);
-    font-family: var(--fonte-secundaria);
+    color: var(--cor-primaria);
+    font-family: var(--fonte-primaria);
     font-size: 1rem;
-    font-weight: 200;
+    font-weight: 100;
     text-decoration: none;
 }
 
@@ -184,20 +184,20 @@ body {
     display: flex;
     justify-content: center;
     gap: 16px;
-    /*width: 70%;*/
+    /*width: 70%;
     border: 2px solid var(--cor-terciaria);
-    border-radius: 9px;
+    border-radius: 9px;*/
     font-size:1rem;
     font-weight: 200;
-    color: var(--cor-secundaria);
-    font-family: var(--fonte-secundaria);
+    color: var(--cor-primaria);
+    font-family: var(--fonte-primaria);
     font-style: normal;
     text-align: center;
     text-decoration: none;
-    padding: 2px;
+    padding: 10px;
 }
 
-.rodape__links__navegacao:visited {
+/*.rodape__links__navegacao:visited {
     background-color: var(--cor-terciaria);
     color:var(--cor-secundaria);
     text-decoration: none;
@@ -206,7 +206,7 @@ body {
     background-color: var(--cor-terciaria);
     color:var(--cor-secundaria);
     text-decoration: none;
-} 
+} */
     
 @media (max-width: 1200px) {
     .cabecalho {
