--- a/styles/style.css
+++ b/styles/style.css
@@ -175,7 +175,7 @@ body {
     text-align: center;
     color: var(--cor-primaria);
     font-family: var(--fonte-primaria);
-    font-size: 1rem;
+    font-size: .7rem;
     font-weight: 100;
     text-decoration: none;
 }
