--- a/styles/style.css
+++ b/styles/style.css
@@ -187,8 +187,8 @@ body {
     /*width: 70%;
     border: 2px solid var(--cor-terciaria);
     border-radius: 9px;*/
-    font-size:1rem;
-    font-weight: 200;
+    font-size:.4rem;
+    font-weight: 100;
     color: var(--cor-primaria);
     font-family: var(--fonte-primaria);
     font-style: normal;
